# coding-agent-prototype

./: .gitignore  Makefile  README.md  TODO.md  example.py  pyproject.toml  requirements.txt
generated_project/: utils.py
src/: coder.py  orchestrator.py  planner.py  prompts.py  tools.py  utils.py
