[project]
name = "coding-agent"
version = "0.1.0"
description = "A LangGraph-based coding agent with orchestrator and coder roles"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.2.15",
    "langchain-core==1.3.0",
    "langchain-groq==1.1.2",
    "langgraph==1.1.7",
    "pydantic==2.13.2",
    "python-dotenv==1.2.2",
]

[tool.uv]
package = false
